--- a/templates/hmis_dash/mapChldImmu.html
+++ b/templates/hmis_dash/mapChldImmu.html
@@ -114,7 +114,7 @@
   <div class="col-12">
     <button type="button" class="btn btn-dark back-button m-2">back</button>
     <span class='info info-hirar'>{{dist_name}}</span>
-    <p>Click on the Polygon(State) to view the Lower Level <span class="drilldown">(Drilldown)</span>
+    <p>Click on the Polygon(District/Sub-District) to view the Lower Level <span class="drilldown">(Drilldown)</span>
       </p>
   </div>
 </div>
