Features updated BarNumeric, Table, Pie, PW map till subdt

--- a/templates/dashboard/dt_dashboard.html
+++ b/templates/dashboard/dt_dashboard.html
@@ -2818,6 +2818,16 @@
             
         }).trigger('change');
 
+        // Only Ahmednagar PHCs visible for time-being
+        $('#areaDt').bind('change', function () {
+            var value = $(this).val();
+            var elements = $('.phcList').children().show(); // show the ones we want
+            if (value != '405') { // if somethings' selected
+                elements.hide();  // hide all the elements
+            }
+            
+        }).trigger('change');
+
     });
 
 </script>
