Map issue resolved

--- a/templates/hmis_dash/mapPW.html
+++ b/templates/hmis_dash/mapPW.html
@@ -43,9 +43,9 @@
     stroke: #ccebed;
     stroke-width: 1px;
   }
-  /* text{
-    font-size: calc(35% + 0.5vw + 0.5vh);
-  } */
+  text{
+    font-size: calc(15% + 0.5vw + 0.5vh);
+  }
 
   .info-hirar {
     font-size: calc(50% + 0.5vw + 0.5vh);
