FY Line chart updated

--- a/templates/hmis_dash/fy_ci_lineNum.html
+++ b/templates/hmis_dash/fy_ci_lineNum.html
@@ -179,12 +179,12 @@
     let sel_fy = '{{ fy }}';
     let sel_st = '{{ dist_name }}';
     let selectint = parseInt(sel_st)
-
+    console.log(selectint, "selectint")
     let areaName = [];
-    if (selectint > 440 )
-        areaName.push(441);  
-    else
-        areaName.push(405);
+    // if (selectint > 440 )
+        areaName.push(selectint);  
+    // else
+    //     areaName.push(405);
     let selectedYear = [];
     selectedYear.push(sel_fy)
 
@@ -633,10 +633,10 @@
 
     $(function () {
         //bind event
-        if (selectint > 440 )
-            $('#state').val(441);
-        else
-            $('#state').val(405);
+        // if (selectint > 440 )
+            $('#state').val(selectint);
+        // else
+        //     $('#state').val(405);
         $('#fyList').val(sel_fy);
 
         $(".category a").click(function () {
