--- a/templates/hmis_dash/fy_cd_lineNum.html
+++ b/templates/hmis_dash/fy_cd_lineNum.html
@@ -563,17 +563,17 @@
     }
 
     function setSection(val) {
-    if (val == 'Total no of Children Born')
+    if (val == 'Childhood Diseases-Pneumonia')
       section = 'chld_disease_pneumonia';
-    else if (val == 'Child Immunisation-Vitamin K1(Birth Dose)')
+    else if (val == 'Childhood Diseases-Sepsis')
       section = 'chld_disease_sepsis';
-    else if (val == 'Child Immunisation-BCG')
+    else if (val == 'Childhood Diseases-Tuberculosis(TB)')
       section = 'chld_disease_tb';
-    else if (val == 'Child Immunisation(9-11 months)-Measles & Rubella (MR) 1st Dose')
+    else if (val == 'Childhood Diseases-Malaria')
       section = 'chld_disease_malaria';
-    else if (val == 'Child Immunisation(9-11 months)-Measles 1st Dose')
+    else if (val == 'Childhood Diseases-Diarrhoea')
       section = 'chld_disease_diarrhoea';
-    else if (val == 'Child immunisation-Vitamin A Dose-1')
+    else if (val == 'Childhood Diseases-Diarrhoea treated in Inpatients')
       section = 'chld_disease_diarrhoea_trtd_inpatnt';
     else if (val == 'Children admitted with upper respiratory infections')
       section = 'chld_admtd_upper_resp_infec';
