--- a/templates/hmis_dash/barNumericChart.html
+++ b/templates/hmis_dash/barNumericChart.html
@@ -361,7 +361,7 @@
 
             case "C-section deliveries": yValue = d => d.tot_c_section_deliveries; sortBy = 'tot_c_section_deliveries'; break;
 
-            case "Total no of Still Birth": yValue = d => d.tot_still_birth; sortBy = 'tot_still_birth'; break;
+            case "Total number of Still Birth": yValue = d => d.tot_still_birth; sortBy = 'tot_still_birth'; break;
 
         }
 
